--- a/oss-clone.spec.in
+++ b/oss-clone.spec.in
@@ -40,11 +40,12 @@ make DESTDIR=%{buildroot} install
 if [ -d /home/sysadmins/admin ]
 then
    chmod     755      /srv/itool
-   chgrp -R sysadmins /srv/itool
+   chgrp -R SYSADMINS /srv/itool
    chmod    2755      /srv/itool/config
    chmod    2775      /srv/itool/hwinfo
    setfacl -m g:WORKSTATIONS:rwx  /srv/itool/hwinfo
    chmod -R 2775      /srv/itool/images
+   setfacl -m g:SYSADMINS:rwx  /srv/itool/images
    chmod -R 755       /srv/itool/ROOT
    /usr/sbin/oss_setup_pxe_enviroment.sh &> /dev/null
 fi
