Add missed script to setup pxe environment.

--- a/oss-clone.spec.in
+++ b/oss-clone.spec.in
@@ -48,6 +48,16 @@ then
    setfacl -m g:SYSADMINS:rwx  /srv/itool/images
    chmod -R 755       /srv/itool/ROOT
    /usr/sbin/oss_setup_pxe_enviroment.sh &> /dev/null
+   DATE=`date +%Y-%m-%d:%H-%M`
+   if [ -e /etc/xinetd.d/tftp ]
+   then
+     cp /etc/xinetd.d/tftp /etc/xinetd.d/tftp.$DATE
+   fi
+   cp /etc/xinetd.d/tftp.in /etc/xinetd.d/tftp
+   if [ ! -e /usr/share/oss/templates/pxeboot ]
+   then
+       cp /usr/share/oss/templates/pxeboot.in /usr/share/oss/templates/pxeboot
+   fi
 fi
 exit 0
 
