--- a/tftp/elilo.conf
+++ b/tftp/elilo.conf
@@ -8,10 +8,10 @@ image=/dev/sda
     label=local
     description="LocalBoot"
 
-image=clone/linux64
+image=clone/linux
     label=clone
     description = "CloneTool"
-    initrd=clone/initrd64
+    initrd=clone/initrd
     append= "install=exec:/bin/start_itool MemLimit=10 MemYASTText=10 Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 apm=off noresume edd=off powersaved=off nohz=off highres=off processor.max_cstate=1 nomodeset x11failsafe"
 
 
