Adapt version. Remove not needed boot parameters. Add insecure=1. Since Leap15.1 we will generate our own initrd.

--- a/tftp/elilo.conf
+++ b/tftp/elilo.conf
@@ -12,6 +12,6 @@ image=clone/linux
     label=clone
     description = "CloneTool"
     initrd=clone/initrd
-    append= "install=exec:/bin/start_itool MemLimit=10 MemYASTText=10 Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 apm=off noresume edd=off powersaved=off nohz=off highres=off processor.max_cstate=1 nomodeset x11failsafe" dhcptimeout=120
+    append= "install=exec:/bin/start_itool Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 dhcptimeout=120 insecure=1"
 
 
