--- a/config/eliloboot.in
+++ b/config/eliloboot.in
@@ -5,5 +5,5 @@ image=clone/linux64
     label=clone
     description = "CloneTool"
     initrd=clone/initrd64
-    append="install=exec:/bin/start_itool MemLimit=10 MemYASTText=10 Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 apm=off noresume edd=off powersaved=off nohz=off highres=off processor.max_cstate=1 nomodeset x11failsafe PARTITIONS=#PARTITIONS# MODUS=AUTO MULTICAST=1" dhcptimeout=120
+    append="install=exec:/bin/start_itool Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 ARTITIONS=#PARTITIONS# MODUS=AUTO MULTICAST=1 dhcptimeout=120 insecure=1"
 
