--- a/config/pxeboot.in
+++ b/config/pxeboot.in
@@ -5,6 +5,6 @@ ui              gfxboot bootlogo
 
 LABEL	cloneTool
         kernel clone/linux
-        append initrd=clone/initrd install=exec:/bin/start_itool MemLimit=10 MemYASTText=10 Info=tftp://install/linuxrc.config ITOOL=parclone STARTCMD=clone SLEEP=1 apm=off noresume edd=off powersaved=off nohz=off highres=off processor.max_cstate=1 nomodeset x11failsafe PARTITIONS=#PARTITIONS# MODUS=AUTO MULTICAST=1 dhcptimeout=120
+        append initrd=clone/initrd install=exec:/bin/start_itool Info=tftp://install/linuxrc.config ITOOL=parclone STARTCMD=clone SLEEP=1 PARTITIONS=#PARTITIONS# MODUS=AUTO MULTICAST=1 dhcptimeout=120 insecure=1
         IPAPPEND 2
 
