--- a/oss-clone.spec.in
+++ b/oss-clone.spec.in
@@ -14,6 +14,7 @@ Packager:	peter@varkoly.de
 Group:		Productivity/Networking/Boot/Servers
 Source:		%{name}.tar.bz2
 BuildArch:	noarch
+PreReq:         permissions
 BuildRequires:  unzip
 BuildRequires:  oss-base
 BuildRequires:  -post-build-checks
