--- a/config/efiboot.in
+++ b/config/efiboot.in
@@ -2,7 +2,7 @@ timeout=1
 
 menuentry 'Automatic Cloning' {
   echo 'Loading kernel ...'
-  linuxefi clone/linux install=exec:/bin/start_itool Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 dhcptimeout=120 insecure=1 ARTITIONS=#PARTITIONS# MODUS=AUTO MULTICAST=1
+  linuxefi clone/linux install=exec:/bin/start_itool Info=tftp://install/linuxrc.config ITOOL=partimage STARTCMD=clone SLEEP=1 dhcptimeout=120 insecure=1 PARTITIONS=#PARTITIONS# MODUS=AUTO MULTICAST=1
   echo 'Loading initial ramdsik ...'
   initrdefi clone/initrd
 }
