Use efi environment from leap 15.6

--- a/tftp/efi/grub.cfg
+++ b/tftp/efi/grub.cfg
@@ -1,10 +1,10 @@
+with_gfx=1
 
-if sleep --interruptible 0 ; then
-  timeout=10
-fi
+gfxmode=auto
+locale_dir=$prefix/locale
+lang=en_US
 
-
-set default="0"
+search --no-floppy --file /boot/x86_64/efi --set
 
 function load_video {
   insmod efi_gop
@@ -29,12 +29,19 @@ source /boot/$net_default_mac
 #background_image  efi/cranix_logo.png
 set theme=Crunchy-1024/theme-potatoes.txt
 export theme
+
+if sleep --interruptible 0 ; then
+  timeout=60
+fi
+
+default=0
+
 menuentry 'Local' --class gnu-linux --class gnu {
-#set root=(hd0,gpt1)
-#chainloader (${root})/EFI/Microsoft/Boot/bootmgfw.efi
-search -s root -f /EFI/Microsoft/Boot/BCD
-chainloader /EFI/Microsoft/Boot/bootmgfw.efi
-boot
+	#set root=(hd0,gpt1)
+	#chainloader (${root})/EFI/Microsoft/Boot/bootmgfw.efi
+	search -s root -f /EFI/Microsoft/Boot/BCD
+	chainloader /EFI/Microsoft/Boot/bootmgfw.efi
+	boot
 }
 
 menuentry 'Clone Tool' {
@@ -47,5 +54,4 @@ menuentry 'Clone Tool' {
   echo 'Loading initial ramdsik ...'
   initrdefi clone/initrd
 }
-
 
